samples/_failures_safe/1760960195_c91451_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05395208.c: In function ‘main’:
./samples/SAFE/__tmp_05395208.c:155:9: error: expected identifier or ‘(’ at end of input
  155 |         int
      |         ^~~
./samples/SAFE/__tmp_05395208.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05395208.c:155:9: error: expected declaration or statement at end of input
